# atomic

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  ROADMAP.md  atomic.db-shm  docker-compose.yml  package-lock.json  package.json  vite.config.ts  web.dockerfile
.github/workflows/: obsidian-plugin-release.yml  (+2 more)
crates/atomic-core/: Cargo.toml
crates/atomic-core/src/: agent.rs  canvas_level.rs  chat.rs  chunking.rs  clustering.rs  compaction.rs  db.rs  embedding.rs  extraction.rs  lib.rs  manager.rs  models.rs  projection.rs  registry.rs  search.rs  settings.rs  tokens.rs
crates/atomic-core/src/briefing/: agentic.rs  mod.rs  task.rs
crates/atomic-core/src/import/: obsidian.rs
crates/atomic-core/src/ingest/: mod.rs  rss.rs
crates/atomic-core/src/providers/: mod.rs  models.rs  structured.rs  types.rs
crates/atomic-core/src/providers/ollama/: llm.rs
crates/atomic-core/src/providers/openai_compat/: embedding.rs  llm.rs  mod.rs
crates/atomic-core/src/providers/openrouter/: embedding.rs  llm.rs
crates/atomic-core/src/scheduler/: mod.rs  state.rs
crates/atomic-core/src/storage/: mod.rs  traits.rs
crates/atomic-core/src/storage/postgres/: atoms.rs  briefings.rs  chat.rs  chunks.rs  clusters.rs  feeds.rs  mod.rs  oauth.rs  search.rs  settings.rs  tags.rs  wiki.rs
crates/atomic-core/src/storage/postgres/migrations/: 008_global_search_vectors.sql
crates/atomic-core/src/storage/sqlite/: atoms.rs  briefings.rs  chat.rs  chunks.rs  clusters.rs  feeds.rs  mod.rs  search.rs  settings.rs  tags.rs  wiki.rs
crates/atomic-core/src/wiki/: agentic.rs  centroid.rs  mod.rs  section_ops.rs
crates/atomic-core/tests/: integration_tests.rs  multi_db_tests.rs  pipeline_tests.rs  storage_tests.rs
crates/atomic-core/tests/support/: mod.rs
docker/: litestream.yml  nginx-fly.conf  nginx.conf
docs/: codemirror-editor.md  milkdown-development-guide.md  milkdown-evaluation-roadmap.md  plan-async-migration.md  plan-managed-hosting.md  prosemirror-evaluation-plan.md
extension/: manifest.json
ios/: project.yml
patches/: @codemirror+view+6.38.8.patch
scripts/: build-release.js  check-layout.mjs  drop-database.js  generate-changelog.js  open-in-db-browser.sh  reset-database.js  reset-tags.js  test-editor-harness.mjs  trace-click-accuracy.mjs  trace-edit-snap.mjs  trace-scroll-stability.mjs
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: agent.rs  apple_notes.rs  chat.rs  chunking.rs  clustering.rs  commands.rs  compaction.rs  db.rs  embedding.rs  extraction.rs  lib.rs  main.rs  models.rs  search.rs  settings.rs  wiki.rs
src-tauri/src/commands/: atoms.rs  canvas.rs  clustering.rs  embedding.rs  graph.rs  helpers.rs  mod.rs  ollama.rs  settings.rs  tags.rs  utils.rs  wiki.rs
src-tauri/src/mcp/: server.rs
src-tauri/src/providers/: mod.rs  models.rs  traits.rs  types.rs
src-tauri/src/providers/ollama/: embedding.rs  llm.rs  mod.rs
src-tauri/src/providers/openrouter/: llm.rs  mod.rs
(+215 files in other folders)
