[package]
name = "atomic-core"
version = "0.1.0"
edition = "2021"
description = "Core RAG library for Atomic knowledge base"
license = "MIT"

[dependencies]
# Database — SQLite (always available)
rusqlite = { version = "0.32", features = ["bundled", "load_extension"] }
sqlite-vec = "0.1.6"

# Database — Postgres (feature-gated)
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio-rustls"], optional = true }
pgvector = { version = "0.4", features = ["sqlx"], optional = true }

# Async
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time", "macros"] }
async-trait = "0.1"
futures = "0.3"

# HTTP
reqwest = { version = "0.12", features = ["json", "stream"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Utilities
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
tiktoken-rs = "0.6"
zerocopy = { version = "0.8", features = ["derive"] }
thiserror = "1"
tracing = "0.1"
utoipa = { version = "5", features = ["preserve_order"], optional = true }

# Token auth
sha2 = "0.10"
rand = "0.8"
base64 = "0.22"

# Markdown parsing
pulldown-cmark = "0.12"

# Content ingestion
dom_smoothie = "0.15"
feed-rs = "2.3"

# For obsidian import
glob = "0.3"
yaml-rust2 = "0.9"
urlencoding = "2"
url = "2"

[features]
default = []
openapi = ["utoipa"]
postgres = ["sqlx", "pgvector"]

[dev-dependencies]
tempfile = "3"
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
# test-util is required for #[tokio::test(start_paused = true)] so retry/backoff
# tests don't sleep real wall-clock seconds — time auto-advances to the next
# pending Sleep deadline when the runtime has no other work.
tokio = { version = "1", features = ["rt-multi-thread", "macros", "test-util"] }
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio-rustls"] }
# Mock HTTP server for provider-level integration tests (mimics OpenAI-compat
# `/v1/embeddings` + `/v1/chat/completions` so tests exercise the real reqwest
# client, request serialization, and response parsing end-to-end).
wiremock = "0.6"
